2001-01-17 Tambet Ingo  <tambet@ximian.com>

	* Changelog: fixed my revious wacky entry. 

2001-01-17  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: print and parse interface tags. Also bring up
	  or down network interfaces, and report their status when printing.
	
2001-01-16  Arturo Espinosa <arturo@ximian.com>

	* network-conf.in: network backend.
	* guess_system.sh: stolen from autoconf, a script to tell the
	system the backends are running on.
	* Makefile.am: install guess_system.sh where be.pl goes.
	* be.pl.in: need to replace ___scriptsdir___ here too, so I removed
	  be.pl and have this one for preprocessing.

2001-01-16  Tambet Ingo  <tambet@ximian.com>

	* memory-conf.in: Added debugging support. Got rid of hardcoded tool
	  locations, made it using be_locate_tool. Switched hardcoded 
	  /proc/meminfo to variable. Get all sizes in format %.1f to unify
	  with frontend.

2001-01-16  Chema Celorio  <chema@celorio.com>

	* time-conf.in (get_zone): when scanning for timezones
	only do a system "diff ..." if the file size matches the
	timezone we are looking for. This reduces loading time.

	* Added ChangeLog 
	
