@@ -1,3 +1,8 @@
+2001-01-18  Arturo Espinosa <arturo@ximian.com>
+
+	* be.pl.in: be_network_get_redhat now gives away more info. Same
+	  should be done for debian and SuSE.
+	
 2001-01-17 Tambet Ingo  <tambet@ximian.com>
 
 	* Changelog: fixed my revious wacky entry. 
